fix: gap value in direction section

--- a/sass/partials/_content-new.scss
+++ b/sass/partials/_content-new.scss
@@ -302,8 +302,11 @@
         display: flex;
         flex-direction: column;
         @include breakpoint-tablet {
-            gap: 236px;
+            gap: 100px;
             flex-direction: row;
+        }
+        @include breakpoint-desktop-medium {
+            gap: 236px;
         }
         .title{
             h2{
