--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -38,11 +38,7 @@ footer{
                     }
                     img{
                         width: 100%;
-                        @include breakpoint-tablet {
-                            width: auto;
-                        }
                         height: 100%;
-                        object-fit: cover;
                     }
                 }
                 .footer-btns{
